--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
 <body>
     <div class="container">
         <h1>Powerdown</h1>
+        <div class="alert alert-info" role="alert">
+        	<h4>
+        		Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
+        	</h4>
+        </div>
+        <div class="row">
+        	<div class="col-md-12">
+        		<div class="form-control">
+        			<p> Select your residence type. </p>
+        			<div class="btn-group btn-group-justified">
+  							<div class="btn-group">
+    							<button type="button" class="btn btn-default">Home Owner</button>
+  							</div>
+ 							 	<div class="btn-group">
+    							<button type="button" class="btn btn-default">Unit Owner</button>
+  							</div>
+  							<div class="btn-group">
+    							<button type="button" class="btn btn-default">Building Owner</button>
+  							</div>
+							</div> <!--end of buttons -->
+							<p> Which bill would you like to analyze? </p>
+							<label class="radio-inline">
+								<input type="radio" name="energy-type" value="electric"> Electricity
+							</label>
+							<label class="radio-inline">
+								<input type="radio" name="energy-type" value="gas"> Gas
+							</label>
+        		</div>
+        	</div>
+        </div>
+
     </div>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
