--- a/index.html
+++ b/index.html
@@ -6,37 +6,30 @@
     <title>Powerdown</title>
 </head>
 <body>
-    <div class="container" ng-controller="InitialFormController">
+    <div class="container" ng-controller="InitialFormController as formCtrl">
         <h1>Powerdown</h1>
         <div class="alert alert-info" role="alert">
-        	<h4>
-        		Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
-        	</h4>
+          <h4>
+            Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
+          </h4>
         </div>
         <div class="row">
-        	<div class="col-md-12">
-        		<div class="form-control">
-        			<p> Select your residence type. </p>
-        			<div class="btn-group btn-group-justified">
-  							<div class="btn-group">
-    							<button type="button" class="btn btn-default">Home Owner</button>
-  							</div>
- 							 	<div class="btn-group">
-    							<button type="button" class="btn btn-default">Unit Owner</button>
-  							</div>
-  							<div class="btn-group">
-    							<button type="button" class="btn btn-default">Building Owner</button>
-  							</div>
-							</div> <!--end of buttons -->
-							<p> Which bill would you like to analyze? </p>
-							<label class="radio-inline">
-								<input type="radio" name="energy-type" value="electric"> Electricity
-							</label>
-							<label class="radio-inline">
-								<input type="radio" name="energy-type" value="gas"> Gas
-							</label>
-        		</div>
-        	</div>
+          <div class="col-md-12">
+            <div class="form-control">
+              <p> Select your residence type. </p>
+              <div class="btn-group btn-group-justified" ng-repeat="building_type in building_types">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default">{{building_type}}</button>
+                </div>
+              </div> <!--end of buttons -->
+              <p> Which bill would you like to analyze? </p>
+              <div class="form-group" ng-repeat="energy_type in energy_types">
+                <label class="radio-inline">
+                  <input type="radio" name="energy-type" value="electric"> {{energy_type}}
+                </label>
+              </div>
+            </div>
+          </div>
         </div>
 
     </div>
