User Type Icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Powerdown</h1>
         <div class="alert alert-info" role="alert">
           <h4>
-            Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
+            Please prepare at least two energy bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
           </h4>
         </div>
         <div class="row">
