--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                   <input type="radio" name="energy-type" value="electric"> {{energy_type}}
                 </label>
               </div>
+              <ul class="pager">
+                <li class="previous disabled"><a href="#">&larr; Previous Step</a></li>
+                <li class="next"><a href="#">Next Step &rarr;</a></li>
+              </ul>
             </div>
           </div>
         </div>
-
     </div>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
