--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
 </head>
 <body>
     <div class="container" ng-controller="InitialFormController as formCtrl">
-        <h1>Powerdown</h1>
-        <div class="alert alert-info" role="alert">
-          <h4>
-            Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
-          </h4>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-control">
-              <p> Select your residence type. </p>
-              <div class="btn-group btn-group-justified" ng-repeat="building_type in building_types">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default">{{building_type}}</button>
-                </div>
-              </div> <!--end of buttons -->
-              <p> Which bill would you like to analyze? </p>
-              <div class="form-group" ng-repeat="energy_type in energy_types">
-                <label class="radio-inline">
-                  <input type="radio" name="energy-type" value="electric"> {{energy_type}}
-                </label>
-              </div>
+      <h1>Powerdown</h1>
+      <div class="alert alert-info" role="alert">
+        <h4>
+          Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
+        </h4>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <form role="form">
+            <div class="form-group">
+              <label for="building-type"> Select your residence type.</label>
+              <label class="radio-inline" ng-repeat="building_type in building_types">
+                <input type="radio" name="building-type" value={{building_type.id}} ng-model="formCtrl.building_type">{{building_type.name}}
+              </label>
             </div>
-          </div>
+            <div class="form-group">
+              <label> Which bill would you like to analyze? </label>
+              <label class="radio-inline" ng-repeat="energy_type in energy_types">
+                <input type="radio" name="energy-type" value="{{energy_type.id}}" ng-model="formCtrl.energy_type"> {{energy_type.name}}
+              </label>
+            </div>
+          </form>
         </div>
+      </div>
 
     </div>
     <script type="text/javascript" src="js/angular.min.js"></script>
