changed alert text

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <div class="container" ng-controller="InitialFormController as formCtrl">
       <h1>Powerdown</h1>
       <div class="alert alert-info" role="alert">
-        <h4>
-          Please prepare at least two power bills--we'll be asking you for some numbers off of them soon. They don't have to be from consecutive months.
-        </h4>
+        Prepare two or more months of heating (electric or gas) bills.
       </div>
       <div class="row">
         <div class="col-md-12">
