--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </div>
     </div>
     <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
