added a date selector <insert pun here>

--- a/index.html
+++ b/index.html
@@ -28,29 +28,17 @@
             </div>
 
               Enter the last day of the period for your first bill. </br>
-             <!-- Split button -->
-            <div class="btn-group">
-              <button type="button" class="btn btn-default">Day</button>
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
+             <div class="input-group date">
+                <input type="text" class="form-control">
+                  <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-th"></i>
+                  </span>
             </div>
-
               <!-- buttons at the bottom of the page -->
-              <ul class="pager">
-                <li class="previous disabled"><a href="regression.html">&larr; Previous Step</a></li>
-                <li class="next"><a href="regression.html">Next Step &rarr;</a></li>
-              </ul>
-=======
-
+            <ul class="pager">
+              <li class="previous disabled"><a href="regression.html">&larr; Previous Step</a></li>
+              <li class="next"><a href="regression.html">Next Step &rarr;</a></li>
+            </ul>
           </form>
         </div>
       </div>
