Addition of graphpage (nonfunctional)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           </form>
         </div>
       </div>
+      <div class="row">
+        <graphpage></graphpage>
+      </div>
     </div>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
