added proper date ieration

--- a/regress.html
+++ b/regress.html
@@ -11,7 +11,7 @@
 
 <script>
 var xVals=[1,2,3];
-var yVals=[2,3,4];
+var yVals=[2,5,4];
 var m;
 var b;
 var result=findLineByLeastSquares(xVals,yVals);
@@ -20,7 +20,7 @@ b=result[1]
 document.write("y="+m+"x+"+b);
 
 
-document.write(day_temps["2013-1-3"])
+heatingDegreeDays("2013-1-3","2013-1-10",5)
 </script>
 
 </body>
