--- a/regress.html
+++ b/regress.html
@@ -20,7 +20,7 @@ b=result[1]
 document.write("y="+m+"x+"+b);
 
 
-heatingDegreeDays("2013-1-3","2013-1-10",5)
+alert(heatingDegreeDays("2013-01-3","2013-01-05",20));
 </script>
 
 </body>
