--- a/graphpage.html
+++ b/graphpage.html
@@ -1,14 +1,4 @@
 <div class="col-md-12">
-  <script>
-    $.get("http://stackoverflow.com/feeds/question/10943544", function (data) {
-      $(data).find("entry").each(function () {
-        var el = $(this);
-
-        console.log("------------------------");
-        console.log("title      : " + el.find("title").text());
-        console.log("author     : " + el.find("author").text());
-        console.log("description: " + el.find("description").text());
-      });
-    });
-  </script>
+{{formCtrl.weather}}
 </div>
+
