--- a/formpage.html
+++ b/formpage.html
@@ -1,3 +1,6 @@
+<div class="alert alert-info" role="alert">
+  Prepare two or more months of heating (electric or gas) bills.
+</div>
 <div class="col-md-12">
   <form role="form">
     <div class="form-group">
