--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
     <div class="container" ng-controller="InitialFormController as formCtrl">
       <h1>Powerdown</h1>
-      <div class="alert alert-info" role="alert">
-        Prepare two or more months of heating (electric or gas) bills.
-      </div>
       <div class="row" ng-show="formCtrl.page(1)">
         <formpage></formpage>
       </div>
@@ -19,11 +16,11 @@
         <graphpage></graphpage>
       </div>
       <div class="row" ng-show="formCtrl.page(3)">
-        <improvementspage></improvementspage>3
+        <improvementspage></improvementspage>
       </div>
       <ul class="pager">
-        <li class="previous" ng-hide="formCtrl.page(1)"><a href="" ng-click="formCtrl.backPage()">&larr; Previous Step</a></li>
-        <li class="next" ng-hide="formCtrl.page(3)"><a href="" ng-click="formCtrl.nextPage()">Next Step &rarr;</a></li>
+        <li class="previous" ng-hide="formCtrl.page(1)"><a ng-click="formCtrl.backPage()">&larr; Previous Step</a></li>
+        <li class="next" ng-hide="formCtrl.page(3)"><a ng-click="formCtrl.nextPage()">Next Step &rarr;</a></li>
       </ul>
     </div>
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
