HDD and CDD's now work very nicely

--- a/regress.html
+++ b/regress.html
@@ -20,7 +20,9 @@ b=result[1]
 document.write("y="+m+"x+"+b);
 
 
-alert(heatingDegreeDays("2013-01-3","2013-01-05",20));
+console.log(heatingDegreeDays("2013-01-01","2014-01-01",20));
+console.log(coolingDegreeDays("2013-01-01","2014-01-01",20));
+
 </script>
 
 </body>
