--- a/graphpage.html
+++ b/graphpage.html
@@ -1,4 +1,5 @@
-<div class="col-md-12">
-{{formCtrl.weather}}
+<div class="row">
+  <div class="col-md-12">
+  {{formCtrl.weather}}
+  </div>
 </div>
-
