--- a/improvements.html
+++ b/improvements.html
@@ -1,4 +1,24 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-4">
+    <img src="buildingpics/capreit.png" alt="Capreit apartments" height="160" width="100" class="row text-center">
+      <div class="row-bottom">
+        <h4>Capreit Apartments:</h4>
+        <img src="buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
+        <ul>
+          <li>New Toilets</li>
+          <li>New management</li>
+          <li>New tenants</li>
+        </ul>
+      </div>
+    </div>
+  <div class="col-md-4">
+    <img src="buildingpics/kensington.png" alt="11 Kensington Avenue" height="160" width="100">
+      <div class="row-bottom">
+        <h4>11 Kensington Ave.</h4>
+        <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
+      </div>
+  </div>
+  <div class="col-md-4">
+    <img src="buildingpics/palaceplace.png" alt="palaceplace apartments" height="160" width="100">
   </div>
 </div>
