--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-animate.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="js/Chart.min.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
