--- a/graphpage.html
+++ b/graphpage.html
@@ -6,16 +6,6 @@
     labels: ["January", "February", "March", "April", "May", "June", "July"],
     datasets: [
         {
-            label: "My First dataset",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40]
-        },
-        {
             label: "My Second dataset",
             fillColor: "rgba(151,187,205,0.2)",
             strokeColor: "rgba(151,187,205,1)",
@@ -30,6 +20,10 @@
     
     var ctx = document.getElementById("myChart").getContext("2d");
     var myLineChart = new Chart(ctx).Line(data);
+    setTimeout(function(){
+    data["datasets"][0]["data"]=[20, 30, 40, 50, 60, 80, 90];
+    myLineChart = new Chart(ctx).Line(data);
+    }, 2000);
     
     </script>
   </div>
