--- a/improvements.html
+++ b/improvements.html
@@ -1,20 +1,24 @@
 <div class="row">
   <div class="col-md-12">
     <p>Based on your building's entered metrics, here are some smiliar buildings to yours
-      that have taken on green initiatives
+      that have taken on green initiatives. </br>
+      Ticking the checkboxes next to the green 
+      initiatives will refresh your green building score and further refine the regression.
     </p>
   </div>  
   <div class="col-md-4">
-    <img src="buildingpics/capreit.png" alt="Capreit apartments" height="160" width="100" class="row text-center">
-      <div class="row-bottom">
-        <h4>Capreit Apartments:</h4>
-        <img src="buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
-        <ul>
-          <li>New Toilets</li>
-          <li>New management</li>
-          <li>New tenants</li>
-        </ul>
-        <h3><em>56%</em> saved on their energy bill as of April 2014!</h3>
+    <div class="row text-center">
+      <img src="buildingpics/capreit.png" alt="Capreit apartments" class="center">
+    </div>
+    <div class="row-bottom">
+      <h4>Capreit Apartments:</h4>
+      <img src="buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
+      <ul>
+        <li>New Toilets</li>
+        <li>New management</li>
+        <li>New tenants</li>
+      </ul>
+      <h3><em>56%</em> saved on their energy bill as of April 2014!</h3>
       </div>
     </div>
   <div class="col-md-4">
