--- a/formpage.html
+++ b/formpage.html
@@ -98,11 +98,10 @@
         </div>
         
         <div class="form-group" ng-show="formCtrl.isElectric()">
-          <label> Rates </label>
+          <label> Rate </label>
           <div class="input-group">
-            <span class="input-group-addon">$</span>
             <input type="text" class="form-control" ng-model="energy.rate" ng-required="formCtrl.isElectric()">
-            <span class="input-group-addon">/kWh</span>
+            <span class="input-group-addon">$/kWh</span>
           </div>
         </div>
       </div>
