Added actual HDD/CDD calculations to main interface

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <script type="text/javascript" src="js/angular-animate.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
-
+    <script type="text/javascript" src="get_degree_days.js"></script>
+    <script type="text/javascript" src="regress.js"></script>
+    
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
