--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button type="button" class="previous btn btn-default" ng-hide="formCtrl.page(1)" ng-click="formCtrl.backPage()">
           &larr; Previous Step
         </button>
-        <button type="button" class="next btn btn-success pull-right" ng-hide="formCtrl.page(3)" ng-click="formCtrl.nextPage()">Next Step &rarr;</button>
+        <button type="button" class="next btn btn-success pull-right" ng-hide="formCtrl.page(3) || !formCtrl.formValidated()" ng-click="formCtrl.nextPage()">Next Step &rarr;</button>
       </div>
     </p>
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
