--- a/formpage.html
+++ b/formpage.html
@@ -119,7 +119,7 @@
   </div>
   <div class="col-md-4">
     <p>
-    <button type="button" class="btn btn-info" ng-click="formCtrl.pushBill()" ng-show="form.$valid">Add Bill</button>
+    <button type="button" class="btn btn-info" ng-click="formCtrl.pushBill()" ng-disabled="!form.$valid">Add Bill</button>
     </p>
   </div>
   <!-- Current -->
