fixed index.html page. content is now based on actual case studies...

--- a/improvements.html
+++ b/improvements.html
@@ -14,16 +14,18 @@
     </div>
       <div class="row-bottom">
         <h4>CAP REIT Properties</h4>
-        <div>
-          <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
-          <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
-          <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20"><hr>
-        </div>
+        <ul>
+          <li>1055 suits housing 4900 tenants</li>
+          <li>27 - 30 year old construction</li>
+          <li>Minimal disruption to tenant services</li>
+        </ul>
+        <hr>
         <ul>
           <li>Approved a comprehnsive program to replace heating and domestic hot water boilers in buildings</li>
           <li>Redesign heating system: integrate space, hot water, ramp, pool heat</li>
           <li>Employ centralized controller; eliminated radiant heat loss during standby periods</li>
           <li>Established preventative maintenance and repair plan</li>
+          <li>Lighting upgrades
         </ul>
         <h5><em>$62 402</em> saved on Enbridge gas bills per year!</h3>
       </div>
@@ -35,17 +37,22 @@
       <img class="img-responsive img-circle" src="buildingpics/kensington.png" alt="15 Kensington Road">
     </div>
       <div class="row-bottom">
-        <h4>15 Kensington Road.</h4>
-        <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
-        <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
+        <h4>15 Kensington Road</h4>
         <ul>
-          <li>Cleaned boilers</li>
-          <li> CFL Lightbulbs</li>
-          <li>External insulation</li>
-          <li>things</li>
-          <li>more things</li>
+          <li>1974 construction</li>
+          <li>210 units</li>
+          <li>4.4 year estimated payback</li>
         </ul>
-        <h3><em>5%</em> saved on their energy bill as of April 2014!</h3>
+        <hr>
+        <ul>
+          <li>Upgraded domestic hot water boilers; increasized size and efficiency to pre-heat incoming air</li>
+          <li>Air handling unit connected to heating boiler through heat exchanger and chiller. 
+              Variable frequency drive motors used to reduce electricty costs. </li>
+          <li>Water-efficienct toilet retrofitting in all suites.</li>
+          <li>Increased capacity and efficiency of CFC-free Chiller unit</li>
+          <li>Sceduling  rennovation work ahead of time allowed for smoother money management and cheaper overall costs.</li>
+        </ul>
+        <h5>Replacing old toilets reduced overall, building-wide water consumption by <em>20%</em>!</h5>
       </div>
   </div>
   
@@ -55,17 +62,19 @@
       <img class="img-responsive img-circle" src="buildingpics/kensington.png" alt="15 Kensington Road">
     </div>
       <div class="row-bottom">
-        <h4>15 Kensington Road.</h4>
-        <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
-        <img src= "buildingpics/leaf.png" alt="greenindex-4" height="20" width="20">
+        <h4>Palace Place Condominium</h4>
         <ul>
-          <li>Cleaned boilers</li>
-          <li> CFL Lightbulbs</li>
-          <li>External insulation</li>
-          <li>things</li>
-          <li>more things</li>
+          <li>504 suite luxury condominium</li>
+          <li>Early 1990's construction</li>
+          <li>Pre-retrofit annual energy costs > $1 million</li>
         </ul>
-        <h3><em>5%</em> saved on their energy bill as of April 2014!</h3>
+        <hr>
+        <ul>
+          <li>Conversion of air systems, HVAC units, and pool heater to natural gas system</li>
+          <li>Lighting upgrade to LEDs in garage, corridors, and exit signs</li>
+          <li>Retrofit domestic hot water heater retrofit to natural gas system</li>
+        </ul>
+        <h5><em>2.5</em> years payback for entire conversion; <em>$425 000</em> total energy savings in year 1!</h5>
       </div>
   </div>
   
