--- a/improvements.html
+++ b/improvements.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" id="improvements">
   <div class="col-md-12">
-    <p class="bg-success text-success"> Based on your building's entered metrics, here are some smiliar buildings to yours
+    <p class="alert alert-success"> Based on your building's entered metrics, here are some smiliar buildings to yours
       that have taken on green initiatives.
       Ticking the checkboxes next to the green 
       initiatives will refresh your green building score and further refine the regression. 
@@ -10,7 +10,7 @@
   <!-- far left column --> 
   <div class="col-md-4">
     <div class="row text-center">
-      <img class="img-responsive img-circle" src="buildingpics/kensington.png" alt="15 Kensington Road">
+      <img class="img-responsive img-circle" src="buildingpics/capreit.png" alt="Capriet Apartments">
     </div>
       <div class="row-bottom">
         <h4>CAP REIT Properties</h4>
@@ -21,11 +21,25 @@
         </ul>
         <hr>
         <ul>
-          <li>Approved a comprehnsive program to replace heating and domestic hot water boilers in buildings</li>
-          <li>Redesign heating system: integrate space, hot water, ramp, pool heat</li>
-          <li>Employ centralized controller; eliminated radiant heat loss during standby periods</li>
-          <li>Established preventative maintenance and repair plan</li>
-          <li>Lighting upgrades
+          <li>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox">Approved a comprehnsive program to replace heating and domestic hot water boilers in buildings
+                </input>
+              </label>
+            </div>
+          </li>
+          <li>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Redesign heating system: integrate space, hot water, ramp, pool heat
+              </label>
+            </div>
+          </li>
+            <li><div class="checkbox"><label><input type="checkbox">Employ centralized controller; eliminated radiant heat loss during standby periods</label></div></li>
+            <li><div class="checkbox"><label><input type="checkbox">Established preventative maintenance and repair plan</label></div></li>
+            <li><div class="checkbox"><label><input type="checkbox">Lighting upgrades
+     
         </ul>
         <h5><em>$62 402</em> saved on Enbridge gas bills per year!</h3>
       </div>
@@ -45,12 +59,12 @@
         </ul>
         <hr>
         <ul>
-          <li>Upgraded domestic hot water boilers; increasized size and efficiency to pre-heat incoming air</li>
-          <li>Air handling unit connected to heating boiler through heat exchanger and chiller. 
-              Variable frequency drive motors used to reduce electricty costs. </li>
-          <li>Water-efficienct toilet retrofitting in all suites.</li>
-          <li>Increased capacity and efficiency of CFC-free Chiller unit</li>
-          <li>Sceduling  rennovation work ahead of time allowed for smoother money management and cheaper overall costs.</li>
+          <li><div class="checkbox"><label><input type="checkbox">Upgraded domestic hot water boilers; increasized size and efficiency to pre-heat incoming air</label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Air handling unit connected to heating boiler through heat exchanger and chiller. 
+              Variable frequency drive motors used to reduce electricty costs. </label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Water-efficienct toilet retrofitting in all suites.</label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Increased capacity and efficiency of CFC-free Chiller unit</label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Sceduling  rennovation work ahead of time allowed for smoother money management and cheaper overall costs.</label></div></li>
         </ul>
         <h5>Replacing old toilets reduced overall, building-wide water consumption by <em>20%</em>!</h5>
       </div>
@@ -70,9 +84,9 @@
         </ul>
         <hr>
         <ul>
-          <li>Conversion of air systems, HVAC units, and pool heater to natural gas system</li>
-          <li>Lighting upgrade to LEDs in garage, corridors, and exit signs</li>
-          <li>Retrofit domestic hot water heater retrofit to natural gas system</li>
+          <li><div class="checkbox"><label><input type="checkbox">Conversion of air systems, HVAC units, and pool heater to natural gas system</label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Lighting upgrade to LEDs in garage, corridors, and exit signs</label></div></li>
+          <li><div class="checkbox"><label><input type="checkbox">Retrofit domestic hot water heater retrofit to natural gas system</label></div></li>
         </ul>
         <h5><em>2.5</em> years payback for entire conversion; <em>$425 000</em> total energy savings in year 1!</h5>
       </div>
