Changed improvements.html instructions

--- a/improvements.html
+++ b/improvements.html
@@ -1,9 +1,9 @@
 <div class="row" id="improvements">
   <div class="col-md-12">
-    <p class="alert alert-success"> Based on your building's entered metrics, here are some smiliar buildings to yours
-      that have taken on green initiatives.
-      Ticking the checkboxes next to the green 
-      initiatives will refresh your green building score and further refine the regression. 
+    <p class="alert alert-success"> Explore what building owners with similar building types have done
+      to reduce their environmental impact.
+      Ticking the checkboxes next to the green initiatives will allow you to preview the cost savings
+      these initiatives could bring to your own building.
     </p>
   </div>
   
