fixed some non heat and on cooling related info

--- a/improvements.html
+++ b/improvements.html
@@ -37,8 +37,7 @@
             </div>
           </li>
             <li><div class="checkbox"><label><input type="checkbox">Employ centralized controller; eliminated radiant heat loss during standby periods</label></div></li>
-            <li><div class="checkbox"><label><input type="checkbox">Established preventative maintenance and repair plan</label></div></li>
-            <li><div class="checkbox"><label><input type="checkbox">Lighting upgrades
+            <li><div class="checkbox"><label><input type="checkbox">Established preventative maintenance and repair plan for boilers</label></div></li>
      
         </ul>
         <h5><em>$62 402</em> saved on Enbridge gas bills per year!</h3>
@@ -62,9 +61,7 @@
           <li><div class="checkbox"><label><input type="checkbox">Upgraded domestic hot water boilers; increasized size and efficiency to pre-heat incoming air</label></div></li>
           <li><div class="checkbox"><label><input type="checkbox">Air handling unit connected to heating boiler through heat exchanger and chiller. 
               Variable frequency drive motors used to reduce electricty costs. </label></div></li>
-          <li><div class="checkbox"><label><input type="checkbox">Water-efficienct toilet retrofitting in all suites.</label></div></li>
           <li><div class="checkbox"><label><input type="checkbox">Increased capacity and efficiency of CFC-free Chiller unit</label></div></li>
-          <li><div class="checkbox"><label><input type="checkbox">Sceduling  rennovation work ahead of time allowed for smoother money management and cheaper overall costs.</label></div></li>
         </ul>
         <h5>Replacing old toilets reduced overall, building-wide water consumption by <em>20%</em>!</h5>
       </div>
