--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container" ng-controller="InitialFormController as formCtrl">
-      <h1>Powerdown</h1>
+      <h1><img class="img-responsive img-thumbnail" width=100px src="logo.png" alt="powerdown logo"></h1>
       <formpage class="animate-show" ng-show="formCtrl.page(1)"></formpage>
       <graphpage class="animate-show" ng-show="formCtrl.page(2)"></graphpage>
       <improvementspage class="animate-show" ng-show="formCtrl.page(3)"></improvementspage>
