--- a/graphpage.html
+++ b/graphpage.html
@@ -52,7 +52,9 @@
       };
     
     var ctx = document.getElementById("myChart").getContext("2d");
-    var myLineChart = new Chart(ctx).Line(data);
+    var myLineChart = new Chart(ctx).Line(data,{
+      yAxisLabel:"Dollars Spent per Hour",
+      xAxisLabel:"Time"});
     }
     </script>
   </div>
