Made regression use costs rather than costs

--- a/graphpage.html
+++ b/graphpage.html
@@ -60,7 +60,7 @@
       xAxisLabel:"Time"
     });
     var head=document.getElementById("title")
-    var node=document.getElementById("myChart")
+    var node=document.getElementById("")
     head.appendChild(node)
     document.write("You Will Spend $"+integrated.toFixed(2)+" Heating and Cooling Tomorrow");
     }
