--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="powerdown">
-<head>
+<head profile="index.html">
+    <link rel="icon" type="image/ico" name="logo.ico">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/datepicker3.css" />
     <link rel="stylesheet" type="text/css" href="css/animations.css" />
