--- a/improvements.html
+++ b/improvements.html
@@ -1,6 +1,6 @@
 <div class="row" id="improvements">
   <div class="col-md-12">
-    <p class="alert alert-success"> Explore what building owners with similar building types have done
+    <p class="alert alert-success"> Explore what other building owners with similar building types have done
       to reduce their environmental impact.
       Ticking the checkboxes next to the green initiatives will allow you to preview the cost savings
       these initiatives could bring to your own building.
@@ -70,7 +70,7 @@
   <!-- far right column --> 
   <div class="col-md-4">
     <div class="row text-center">
-      <img class="img-responsive img-circle" src="buildingpics/kensington.png" alt="15 Kensington Road">
+      <img class="img-responsive img-circle" src="buildingpics/palaceplace.png" alt="15 Kensington Road">
     </div>
       <div class="row-bottom">
         <h4>Palace Place Condominium</h4>
@@ -82,7 +82,6 @@
         <hr>
         <ul>
           <li><div class="checkbox"><label><input type="checkbox">Conversion of air systems, HVAC units, and pool heater to natural gas system</label></div></li>
-          <li><div class="checkbox"><label><input type="checkbox">Lighting upgrade to LEDs in garage, corridors, and exit signs</label></div></li>
           <li><div class="checkbox"><label><input type="checkbox">Retrofit domestic hot water heater retrofit to natural gas system</label></div></li>
         </ul>
         <h5><em>2.5</em> years payback for entire conversion; <em>$425 000</em> total energy savings in year 1!</h5>
