--- a/improvements.html
+++ b/improvements.html
@@ -24,7 +24,7 @@
           <li>
             <div class="checkbox">
               <label>
-                <input type="checkbox">Approved a comprehnsive program to replace heating and domestic hot water boilers in buildings
+                <input type="checkbox">Approved a comprehensive program to replace heating and domestic hot water boilers in buildings
                 </input>
               </label>
             </div>
